<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <EditText android:id="@+id/username"
        android:hint="@string/username"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textAutoComplete"/>

    <View android:layout_width="match_parent"
        android:layout_below="@id/username"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <EditText android:id="@+id/password"
        android:hint="@string/password"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_below="@id/password"/>

    <Button android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/sign_up"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_underlined"/>

</RelativeLayout>